# somenewlanguage

./: .clang-format  .gitignore  1_bootstrap.sh  2_make_deps.sh  3_config_this.sh  CMakeLists.txt  LICENSE  README.md  clang-format-all.sh  unsorted-notes
data/: glfwinit.ast  helloworld.fast  program.fast
doc/: books.txt  design-ideas.md  frags-related-to-fn-app.txt  notes_from_googledrive.txt  paradigms.md  unsorted-notes
parser/: CMakeLists.txt  ast.cpp  ast.h  ast_builder.cpp  ast_builder.h  ast_syntax.cpp  ast_syntax.h  command_line.cpp  command_line.h  common.cpp  consts.h  cppgen.cpp  parser.cpp  parser_main.cpp  run_parser.cpp  run_parser.h
playground/: storage.cpp
src/: CMakeLists.txt
src/c2/: CMakeLists.txt  ast.cpp  ast.h  ast_builder.cpp  ast_builder.h  ast_syntax.cpp  ast_syntax.h  bst.cpp  bst.h  builtinnames.cpp  builtinnames.h  command_line.h  consts.h  cppgen.h  cst.cpp  cst.h  errors.h  main.cpp  shell.cpp  shell.h
src/fc/: CMakeLists.txt  ast.cpp  ast.h  ast_builder.cpp  ast_builder.h  ast_syntax.cpp  ast_syntax.h  builtinnames.cpp  builtinnames.h  command_line.cpp  common.h  cppgen.cpp  cppgen.h  main.cpp  program.fast  shell.cpp  shell.h  test.fast
src/playground/: CMakeLists.txt  storage.cpp
src/util/: CMakeLists.txt  arena.cpp  arena.h  constants.h  filereader.cpp  filereader.h  headeronlies.cpp  log.h  utf.cpp  utf.h
src2/: CMakeLists.txt  ast.cpp  ast.h  astops.cpp  astops.h  bound_variables.cpp  bound_variables.h  bst.cpp  bst.h  builtin_abstraction.cpp  builtin_abstraction.h  builtin_function.cpp  builtin_function.h  common.cpp  common.h  compileterm.cpp  context.cpp  context.h  either.h  evaluateorcompileterm.cpp  evaluateorcompileterm.h  evaluateterm.cpp  freevariablesofterm.cpp  freevariablesofterm.h  indented_lines.cpp  indented_lines.h  infertypeofterm.cpp  main.cpp  module.cpp  module.h  number.cpp  number.h  program_type.cpp  program_type.h  samples.cpp  samples.h  store.cpp  store.h  term.cpp  term.h  (+8 more)
src2/samples/: helloworld.tree
util/: CMakeLists.txt  constants.h  either.h  ensure_char8_t.h  filereader.cpp  filereader.h  log.cpp  log.h  maybe.h  utf.h  utf8.cpp  utf8.h
